	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.6-trunk
# ...
                Version 0.5

# (r746*)
 * -R / --recursive switch to turn on recursive push of command line specified directories
# (r669*)
 * added --sort and --sort-basename to sort the images list
 * introduced mipmap mechanism (_use_mipmaps) for faster display/scaling of images
# (r644,r651*) (undocumented) r676)
 * status bar customizable with _display_status_fmt and _info_fmt_str, which can be
   controlled by the use of special image variable specifiers ('expandos'):
    "%T" expando to get (and display) total memory used by the program 
    "%C" expando to get (and display) file/memory usage by image cache
    "%M" expando to get (and display) memory used by the current (displayed) image
    "%c" expando to get (and display) centering information
    "%m" expando to get (and display) current image mipmap occupation information
    "%k" expando to get (and display) current image i:_comment value
    "%?PRE?VAR?POST?" expando to get (and display) "PRE".i:VAR."POST"
    ...
# (r674*)
 * search (and jump) on image descriptions via 'goto' and key '/'
# (r696)
 * when repeating search with 'repeat_last', will use last direction
 * '?' key is now assigned to backward search (goto '-//')
 * default 'C-p' key is now assigned to repeat last backward search (goto '-//')
# (TODO)
 * image cache will remember alignment within viewport
# (r667*)
 * jump back and forth from the last viewed image with the ' (single quote aka apostrophe)
   key and the _lastfileindex variable
# (r672*)
 * added --load-image-descriptions-file (equivalent to 'desc' 'load') to populate 
   the i:_comment values of each loaded image file and set _caption_over_image=2
# (r682*)
   (with it added also --image-descriptions-file-separator)
# (689*,790*)
 * added the 'desc "load"' command to load a textual files comments description file
# (r851-r879):